i add a h1 tag at last

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <div class="project-box">
             <i class="uil uil-award"></i>
             <h3>Experience</h3>
-            <label>1 year in web development</label>
+            <label>  1 year in web development</label>
           </div>
 
          </div>
@@ -175,7 +175,7 @@
       <!-- container box  -->
       <section class="section" id="contact">
         <div class="top-header">
-          <h1>Let`s Work Together</h1>
+          <h1>Let's Work Together</h1>
           <span>Do you have a project in your mind, contact me here </span>
         </div>
         <div class="row">
@@ -219,7 +219,7 @@
             <a href="#projects">Projects</a>
           </li>
           <li class="footer_menu_list">
-            <a href="#conatct">Conatct</a>
+            <a href="#conatct">Contact</a>
           </li>
         </ul>
       </div>
@@ -235,5 +235,5 @@
     </footer>
   </div>
 </body>
-
+<h1>thum khatri</h1>
 </html>
