--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           </div>
         </div>
         <div class="featured-image">
-          <div calss="image">
-            <img src="girl.png" alt="">
+          <div class="image">
+            <img src="profile.png" alt="">
 
           </div>
         </div>
@@ -194,7 +194,7 @@
               </div>
               <div class="text-area">
                 <input type="text" class="input-subject" placeholder="Subject">
-                <textarea placeholder="Message"></textarea>
+                <textarea class="textarea" placeholder="Message"></textarea>
               </div>
               <div class="form-button">
                 <button class="btn">Send <i class="uil uil-message"></i>
@@ -234,6 +234,7 @@
       </div>
     </footer>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.umd.js"></script>
+  <script src="script.js"></script>
 </body>
-<h1>thum khatri</h1>
 </html>
