--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <p>Hello I,m</p>
           </div>
           <div class="featured-name">
-            <span calss="typedText"></span>
+            <span class="typedText"></span>
           </div>
           <div class="text-info">
             <p>
@@ -235,6 +235,7 @@
     </footer>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.umd.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
